--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,20 @@
 {
-  "name": "payu/payu-php",
-  "description": "Cliente PayU API para PHP",
-  "keywords": [
-    "payu",
-    "client",
-    "api",
-    "peru",
-    "php",
-    "payments",
-    "pagos"
-  ],
-  "homepage": "https://payu.com",
-  "type": "library",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "PayU and contributors",
-      "homepage": "https://github.com/payu/payu-php/contributors"
+    "name": "payu/payu-php",
+    "description": "Payu php",
+    "type": "composer-plugin",
+    "authors": [
+        {
+            "name": "williams",
+            "email": "williams.conyas@unas.edu.pe"
+        }
+    ],
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=5.3.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "PayU": "src/"
+        }
     }
-  ],
-  "require": {
-    "php": ">=5.3.3"
-  },
-  "autoload": {
-    "classmap": [
-      "lib/PayU/"
-    ]
-  }
 }
