--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-0": {
-            "PayU": "src/"
-        }
+        "classmap": [
+            "src/PayU/"
+        ]
     }
 }
