--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "php": ">=5.3.0"
     },
     "autoload": {
+        "psr-4": {
+            "PayU\\": "src/"
+        },
         "classmap": [
             "src/PayU/"
         ]
